libvitaboy 1.0.1 (2012-03-10)  Fatbag

 * Corrected the BlendVertices function; blend vertices tug real vertices, not the other way around
 * Interleaved all vertex data (coords, texcoords, normals, blend weights) into the VertexData array


libvitaboy 1.0.0 (2012-03-04)  Fatbag

 * First stable release
 * Read support for ANIM, APR, BND, COL, HAG, MESH, OFT, PO, SKEL
 * Working rendering and animation of characters in OpenGL
 * Basic keyboard controls
 * Support for environments: MinGW
 * Support for platforms: i686, x86-64